@@ -609,6 +609,24 @@ name|String
 argument_list|>
 argument_list|()
 decl_stmt|;
+DECL|field|extraRequestFilters
+specifier|private
+name|SortedMap
+argument_list|<
+name|Class
+argument_list|,
+name|String
+argument_list|>
+name|extraRequestFilters
+decl_stmt|;
+DECL|field|extraFilters
+specifier|private
+name|LinkedList
+argument_list|<
+name|FilterHolder
+argument_list|>
+name|extraFilters
+decl_stmt|;
 DECL|field|sslConfig
 specifier|private
 name|SSLConfig
@@ -881,26 +899,7 @@ argument_list|>
 name|extraServlets
 parameter_list|)
 block|{
-if|if
-condition|(
-literal|null
-operator|!=
-name|extraServlets
-condition|)
-block|{
 name|this
-operator|.
-name|extraServlets
-operator|.
-name|putAll
-argument_list|(
-name|extraServlets
-argument_list|)
-expr_stmt|;
-block|}
-name|this
-operator|.
-name|init
 argument_list|(
 name|solrHome
 argument_list|,
@@ -908,20 +907,18 @@ name|context
 argument_list|,
 name|port
 argument_list|,
-name|stopAtShutdown
-argument_list|)
-expr_stmt|;
-name|this
-operator|.
 name|solrConfigFilename
-operator|=
-name|solrConfigFilename
-expr_stmt|;
-name|this
-operator|.
-name|schemaFilename
-operator|=
+argument_list|,
 name|schemaFileName
+argument_list|,
+name|stopAtShutdown
+argument_list|,
+name|extraServlets
+argument_list|,
+literal|null
+argument_list|,
+literal|null
+argument_list|)
 expr_stmt|;
 block|}
 DECL|method|JettySolrRunner
@@ -958,6 +955,71 @@ name|SSLConfig
 name|sslConfig
 parameter_list|)
 block|{
+name|this
+argument_list|(
+name|solrHome
+argument_list|,
+name|context
+argument_list|,
+name|port
+argument_list|,
+name|solrConfigFilename
+argument_list|,
+name|schemaFileName
+argument_list|,
+name|stopAtShutdown
+argument_list|,
+name|extraServlets
+argument_list|,
+name|sslConfig
+argument_list|,
+literal|null
+argument_list|)
+expr_stmt|;
+block|}
+comment|/**    * Constructor taking an ordered list of additional (filter holder -> path spec) mappings.    * Filters are placed after the DebugFilter but before the SolrDispatchFilter.    */
+DECL|method|JettySolrRunner
+specifier|public
+name|JettySolrRunner
+parameter_list|(
+name|String
+name|solrHome
+parameter_list|,
+name|String
+name|context
+parameter_list|,
+name|int
+name|port
+parameter_list|,
+name|String
+name|solrConfigFilename
+parameter_list|,
+name|String
+name|schemaFileName
+parameter_list|,
+name|boolean
+name|stopAtShutdown
+parameter_list|,
+name|SortedMap
+argument_list|<
+name|ServletHolder
+argument_list|,
+name|String
+argument_list|>
+name|extraServlets
+parameter_list|,
+name|SSLConfig
+name|sslConfig
+parameter_list|,
+name|SortedMap
+argument_list|<
+name|Class
+argument_list|,
+name|String
+argument_list|>
+name|extraRequestFilters
+parameter_list|)
+block|{
 if|if
 condition|(
 literal|null
@@ -972,6 +1034,41 @@ operator|.
 name|putAll
 argument_list|(
 name|extraServlets
+argument_list|)
+expr_stmt|;
+block|}
+if|if
+condition|(
+literal|null
+operator|!=
+name|extraRequestFilters
+condition|)
+block|{
+name|this
+operator|.
+name|extraRequestFilters
+operator|=
+operator|new
+name|TreeMap
+argument_list|<
+name|Class
+argument_list|,
+name|String
+argument_list|>
+argument_list|(
+name|extraRequestFilters
+operator|.
+name|comparator
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|this
+operator|.
+name|extraRequestFilters
+operator|.
+name|putAll
+argument_list|(
+name|extraRequestFilters
 argument_list|)
 expr_stmt|;
 block|}
@@ -1669,6 +1766,63 @@ name|REQUEST
 argument_list|)
 argument_list|)
 expr_stmt|;
+if|if
+condition|(
+name|extraRequestFilters
+operator|!=
+literal|null
+condition|)
+block|{
+name|extraFilters
+operator|=
+operator|new
+name|LinkedList
+argument_list|<
+name|FilterHolder
+argument_list|>
+argument_list|()
+expr_stmt|;
+for|for
+control|(
+name|Class
+name|filterClass
+range|:
+name|extraRequestFilters
+operator|.
+name|keySet
+argument_list|()
+control|)
+block|{
+name|extraFilters
+operator|.
+name|add
+argument_list|(
+name|root
+operator|.
+name|addFilter
+argument_list|(
+name|filterClass
+argument_list|,
+name|extraRequestFilters
+operator|.
+name|get
+argument_list|(
+name|filterClass
+argument_list|)
+argument_list|,
+name|EnumSet
+operator|.
+name|of
+argument_list|(
+name|DispatcherType
+operator|.
+name|REQUEST
+argument_list|)
+argument_list|)
+argument_list|)
+expr_stmt|;
+block|}
+block|}
 name|dispatchFilter
 operator|=
 name|root
@@ -2335,6 +2489,31 @@ operator|.
 name|destroy
 argument_list|()
 expr_stmt|;
+if|if
+condition|(
+name|extraFilters
+operator|!=
+literal|null
+condition|)
+block|{
+for|for
+control|(
+name|FilterHolder
+name|f
+range|:
+name|extraFilters
+control|)
+block|{
+name|f
+operator|.
+name|getFilter
+argument_list|()
+operator|.
+name|destroy
+argument_list|()
+expr_stmt|;
+block|}
+block|}
 block|}
 name|server
 operator|.
