@@ -2897,6 +2897,11 @@ literal|false
 argument_list|,
 name|getExtraServlets
 argument_list|()
+argument_list|,
+literal|null
+argument_list|,
+name|getExtraRequestFilters
+argument_list|()
 argument_list|)
 decl_stmt|;
 name|jetty
@@ -2988,6 +2993,11 @@ argument_list|,
 literal|false
 argument_list|,
 name|getExtraServlets
+argument_list|()
+argument_list|,
+literal|null
+argument_list|,
+name|getExtraRequestFilters
 argument_list|()
 argument_list|)
 decl_stmt|;
